--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
                         <span class="text-primary">Jun-Xuan Lin</span>
                     </h1>
                     <div class="subheading mb-5">
-                        台北市木柵路一段17巷1號 No. 1, Ln. 17, Sec. 1, Muzha Rd., Wenshan Dist., Taipei City 116, Taiwan (R.O.C.) (886)-2-22368225
+                        雲林縣台西鄉富琦村和平路46巷82號 No. 82, Ln. 46, Heping Rd., Taixi Township, Yunlin County, Taiwan (R.O.C.) (886)-5-6903827
                         <a href="mailto:name@email.com">lin230618@gmail.com</a>
                     </div>
                     <p class="lead mb-5">我的興趣是平時攝影，追各種類型的劇，喜歡簡單的人事物。</p>
                     <p class="lead mb-5">My hobby is taking photos in my free time, and I enjoy watching various types of dramas. I also like simple things and people.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="" href=""><i class=""></i></a>
+                        <a class="social-icon" href="https://github.com/A111070015?tab=repositories"target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/jun_xuan014/?hl=zh-tw"target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/junxuan.lin.5/"target="_blank"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
