--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">世新大學 資訊傳播學系</h3>
+                            <h3 class="mb-0">世新大學 資訊傳播學系
+                                <a class="expedu-icon" href="https://ics.wp.shu.edu.tw/"target="_blank"><i class="fa-solid fa-school"></i></a>
+                            </h3>
                             <div class="subheading mb-3">Shih Hsin University - Information and Communications</div>
                             <div>Information and Communications</div>
                             <p></p>
@@ -116,7 +118,9 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">雲林縣私立天主教永年高級中學</h3>
+                            <h3 class="mb-0">雲林縣私立天主教永年高級中學
+                                <a class="expedu-icon" href="http://www.ynhs.ylc.edu.tw/"target="_blank"><i class="fa-solid fa-school"></i></a>
+                            </h3>
                             <div class="subheading mb-3">Perpetual Help High School</div>
                             <p></p>
                         </div>
