增加一個 興趣圖案

--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>Sometimes I enjoy my own time and usually like to take photos, sing, do yoga, read, or watch dramas. When the weather is good, I also ride a bicycle.</p>
                     <p class="mb-0"></p>
+                    <div class="interest icon">
+                        <a class="" href=""><i class=""></i></a>
+                        <a class="interest icon" ><i class="fa-sharp fa-regular fa-camera-retro"></i></a>
+                        <a class="interest icon" ><i class=></i></a>
+                        <a class="interest icon" ><i class=></i></a>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
