--- a/index.html
+++ b/index.html
@@ -174,14 +174,16 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Sometimes I enjoy my own time and usually like to take photos, sing, do yoga, read, or watch dramas. When the weather is good, I also ride a bicycle.</p>
-                    <p class="mb-0"></p>
-                    <div class="interest icon">
-                        <a class="" href=""><i class=""></i></a>
-                        <a class="interest icon" ><i class="fa-sharp fa-regular fa-camera-retro"></i></a>
-                        <a class="interest icon" ><i class=></i></a>
-                        <a class="interest icon" ><i class=></i></a>
-                    </div>
+                    <p>有時候我享受個人時光，我通常喜歡拍照、唱歌、做瑜珈、閱讀、或追劇。天氣好時，我也會騎腳踏車。</p>
+                    <p class="mb-0">Sometimes I enjoy my own time and usually like to take photos, sing, do yoga, read, or watch dramas. When the weather is good, I also ride a bicycle.</p>
+                    <ul class="interest icon">
+                        <li class="interest icon"><i class="fa-sharp fa-regular fa-camera-retro"></i></li>
+                        <li class="interest icon"><i class=""></i></li>
+                        <li class="interest icon"><i class=""></i></li>
+                        <li class="interest icon"><i class=""></i></li>
+                        <li class="interest icon"><i class=""></i></li>
+                        <li class="interest icon"><i class=""></i></li>
+                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
