--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
                     <p class="mb-0">Sometimes I enjoy my own time and usually like to take photos, sing, do yoga, read, or watch dramas. When the weather is good, I also ride a bicycle.</p>
                     <ul class="interest icon">
                         <li class="interest icon"><i class="fa-solid fa-camera"></i></li>
-                        <li class="interest icon"><i class=""></i></li>
-                        <li class="interest icon"><i class=""></i></li>
-                        <li class="interest icon"><i class=""></i></li>
-                        <li class="interest icon"><i class=""></i></li>
-                        <li class="interest icon"><i class=""></i></li>
+                        <li class="interest icon"><i class="fa-solid fa-music"></i></li>
+                        <li class="interest icon"><i class="fa-solid fa-heart-pulse"></i></li>
+                        <li class="interest icon"><i class="fa-solid fa-book-open-reader"></i></li>
+                        <li class="interest icon"><i class="fa-solid fa-film"></i></li>
+                        <li class="interest icon"><i class="fa-solid fa-person-biking"></i></li>
                     </ul>
                 </div>
             </section>
