--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>有時候我享受個人時光，我通常喜歡拍照、唱歌、做瑜珈、閱讀、或追劇。天氣好時，我也會騎腳踏車。</p>
                     <p class="mb-0">Sometimes I enjoy my own time and usually like to take photos, sing, do yoga, read, or watch dramas. When the weather is good, I also ride a bicycle.</p>
-                    <ul class="interest icons">
-                        <li class="interest icon"><i class="fa-solid fa-camera"></i></li>
-                        <li class="interest icon"><i class="fa-solid fa-music"></i></li>
-                        <li class="interest icon"><i class="fa-solid fa-heart-pulse"></i></li>
-                        <li class="interest icon"><i class="fa-solid fa-book-open-reader"></i></li>
-                        <li class="interest icon"><i class="fa-solid fa-film"></i></li>
-                        <li class="interest icon"><i class="fa-solid fa-person-biking"></i></li>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fa-solid fa-camera"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-music"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-heart-pulse"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-book-open-reader"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-film"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-person-biking"></i></li>
                     </ul>
                 </div>
             </section>
