--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <!-- Portfolios-->
+            <section class="resume-section" id="portfolios">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Portfolios</h2>
                     <ul class="fa-ul mb-0">
