更改程式工具圖案區和興趣內容和一個作品

--- a/index.html
+++ b/index.html
@@ -135,18 +135,18 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-python"></i></li>
+                        <li class=""><i class=""></i></li>
+                        <li class=""><i class=""></i></li>
+                        <li class=""><i class=""></i></li>
+                        <li class=""><i class=""></i></li>
+                        <li class=""><i class=""></i></li>
+                        <li class=""><i class=""></i></li>
+                        <li class=""><i class=""></i></li>
+                        <li class=""><i class=""></i></li>
+                        <li class=""><i class=""></i></li>
+                        <li class=""><i class=""></i></li>
+                        <li class=""><i class=""></i></li>
                     </ul>
                     <div class="subheading mb-3">Specialties</div>
                     <ul class="fa-ul mb-0">
@@ -174,15 +174,17 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>有時候我享受個人時光，我通常喜歡拍照、唱歌、做瑜珈、閱讀、或追劇。天氣好時，我也會騎腳踏車。</p>
-                    <p class="mb-0">Sometimes I enjoy my own time and usually like to take photos, sing, do yoga, read, or watch dramas. When the weather is good, I also ride a bicycle.</p>
+                    <p>有時候我享受個人時光，我通常喜歡拍照、聽音樂、做瑜珈、做手工、閱讀、或追劇。天氣好時，我也會騎腳踏車或者打籃球。</p>
+                    <p class="mb-0">Sometimes I enjoy my own time and usually like to take photos, listen to music, do yoga, make crafts, read, or watch dramas. When the weather is good, I also ride a bicycle or play basketball.</p>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fa-solid fa-camera"></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-music"></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-heart-pulse"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-hands"></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-book-open-reader"></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-film"></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-person-biking"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-basketball"></i></li>
                     </ul>
                 </div>
             </section>
@@ -193,8 +195,8 @@
                     <h2 class="mb-5">Portfolios</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            <span class="fa-li"><i class="fa-solid fa-image-portrait"></i></span>
+                            策展自己-數位展覽作品 連結:https://prezi.com/view/0oYkqMqmPbz2ENG4DD9S/
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
