更改第一個作品

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                     <h2 class="mb-5">Portfolios</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fa-solid fa-image-portrait"></i></span>
-                            策展自己-數位展覽作品 連結:https://prezi.com/view/0oYkqMqmPbz2ENG4DD9S/
+                            <span class="fa-li" href="https://prezi.com/view/0oYkqMqmPbz2ENG4DD9S/"target="_blank"><i class="fa-solid fa-image-portrait"></i></span>
+                            策展自己-數位展覽作品 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
