--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <h2 class="mb-5">Portfolios</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li" href="https://prezi.com/view/0oYkqMqmPbz2ENG4DD9S/"target="_blank"><i class="fa-solid fa-image-portrait"></i></span>
+                            <a class="fa-li" href="https://prezi.com/view/0oYkqMqmPbz2ENG4DD9S/"target="_blank"><i class="fa-solid fa-image-portrait"></i></a>
                             策展自己-數位展覽作品 
                         </li>
                         <li>
