--- a/index.html
+++ b/index.html
@@ -198,38 +198,34 @@
                             <a class="fa-li" href="https://prezi.com/view/0oYkqMqmPbz2ENG4DD9S/"target="_blank"><i class="fa-solid fa-image-portrait"></i></a>
                             策展自己-數位展覽作品 
                         </li>
+
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            <a class="fa-li" href="https://drive.google.com/drive/u/0/folders/1bpi8AAcVmPCUpYOodJIApB5xMMD0v3JG"target="_blank"><i class="fa-solid fa-file-word"></i></span>
+                            小論文-空間色彩的變化對人的感受和情緒之影響
                         </li>
+
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            <a class="fa-li"><i class="fa-brands fa-pinterest"></i></span>
+                            攝影作品
                         </li>
+
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
                             Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
                         </li>
+
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
                             Place - University of Colorado Boulder - Emerging Tech Competition 2008
                         </li>
+
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
                             Place - James Buchanan High School - Hackathon 2006
                         </li>
+
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
                             Place - James Buchanan High School - Hackathon 2005
                         </li>
                     </ul>
