--- a/index.html
+++ b/index.html
@@ -200,30 +200,25 @@
                         </li>
 
                         <li>
-                            <a class="fa-li" href="https://drive.google.com/drive/u/0/folders/1bpi8AAcVmPCUpYOodJIApB5xMMD0v3JG"target="_blank"><i class="fa-solid fa-file-word"></i></span>
+                            <a class="fa-li" href="https://drive.google.com/drive/u/0/folders/1bpi8AAcVmPCUpYOodJIApB5xMMD0v3JG"target="_blank"><i class="fa-solid fa-file-word"></i></a>
                             小論文-空間色彩的變化對人的感受和情緒之影響
                         </li>
-
                         <li>
                             <a class="fa-li"><i class="fa-brands fa-pinterest"></i></span>
                             攝影作品
                         </li>
-
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
                         </li>
-
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Place - University of Colorado Boulder - Emerging Tech Competition 2008
                         </li>
-
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Place - James Buchanan High School - Hackathon 2006
                         </li>
-
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Place - James Buchanan High School - Hackathon 2005
