專長前兩個

--- a/index.html
+++ b/index.html
@@ -151,12 +151,13 @@
                     <div class="subheading mb-3">Specialties</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            <span class="fa-li"><i class="fa-solid fa-images"></i></span>
+                            Photoshop視覺設計美編 Visual design and graphic design
                         </li>
+                        ----------------------------------------------------------
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            <span class="fa-li"><i class="fa-solid fa-lightbulb"></i></span>
+                            資訊行銷 Information marketing
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
