--- a/index.html
+++ b/index.html
@@ -154,18 +154,18 @@
                             <span class="fa-li"><i class="fa-solid fa-images"></i></span>
                             Photoshop視覺設計美編 Visual design and graphic design
                         </li>
-                        ----------------------------------------------------------
+                        ----------------------------------------------------------------------
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-lightbulb"></i></span>
                             資訊行銷 Information marketing
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            <span class="fa-li"><i class="fa-solid fa-scissors"></i></span>
+                            縫紉 Sewing
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            <span class=""><i class=""></i></span>
+                            
                         </li>
                     </ul>
                 </div>
