--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@
             <section class="resume-section" id="portfolios">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Portfolios</h2>
+                    <div class="mb-2">
+                        <p>作品的<a href="portfolios.html">詳細介紹</a></p>
+                    </div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <a class="fa-li" href="https://prezi.com/view/0oYkqMqmPbz2ENG4DD9S/"target="_blank"><i class="fa-solid fa-image-portrait"></i></a>
