--- a/portfolios.html
+++ b/portfolios.html
@@ -21,7 +21,42 @@
     </head>
     <body id="page-top">
         <div class="container">
-            <h1>林鈞萱的作品介紹</h1>
+         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html"><img src="assets/img/personal-information.png" width="40p"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      各種作品
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">小論文</a></li>
+                      <li><a class="dropdown-item" href="#">策展自己-prezi應用</a></li>
+                      <li><a class="dropdown-item" href="#">Pinterest</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+         </nav>
+            <h1 class="mt-5">林鈞萱的作品介紹</h1>
         </div>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
     </body>
 </html>
