--- a/portfolios.html
+++ b/portfolios.html
@@ -21,6 +21,7 @@
     </head>
     <body id="page-top">
         <div class="container">
+          <div class="ws"></div>
          <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html"><img src="assets/img/personal-information.png" width="40p"></a>
