導覽頁 區塊連結

--- a/portfolios.html
+++ b/portfolios.html
@@ -31,29 +31,64 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active js-scroll-trigger" aria-current="page" href="#home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link js-scroll-trigger" href="#features">Features</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link js-scroll-trigger" href="#pricing">Pricing</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle " href="#各種作品" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       各種作品
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">小論文</a></li>
-                      <li><a class="dropdown-item" href="#">策展自己-prezi應用</a></li>
-                      <li><a class="dropdown-item" href="#">Pinterest</a></li>
+                      <li class="dropdown-item"> <a class="js-scroll-trigger" href="#小論文">小論文</a></li> 
+                      <li class="dropdown-item"> <a class="js-scroll-trigger" href="#策展自己-prezi應用">策展自己-prezi應用</a></li>
+                      <li class="dropdown-item"> <a class="js-scroll-trigger" href="#pinterest">Pinterest</a></li>
                     </ul>
                   </li>
                 </ul>
               </div>
             </div>
          </nav>
-            <h1 class="mt-5">林鈞萱的作品介紹</h1>
+         <!-- Page Content-->
+            <!-- Home-->
+            <section class="resume-section" id="home">
+              <div class="resume-section-content"></div>
+                  <button type="button" data-bs-target="#home" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"><img class="bd-placeholder-img fill" width="%" height="250%" src="assets/img/home背景.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"></img></button>
+                 <h1 class="mt-5">林鈞萱的作品介紹</h1>
+              </div>
+            </section>
+            <!-- Features-->
+            <section class="resume-section" id="features">
+              <div class="resume-section-content">
+              </div>
+            </section>
+            <!-- Pricing-->
+            <section class="resume-section" id="pricing">
+              <div class="resume-section-content">
+              </div>
+            </section>
+            <!-- 小論文-->
+            <section class="resume-section" id="小論文">
+              <div class="resume-section-content">
+                <h1>空間色彩的變化對人的感受和情緒之影響</h1>
+              </div>
+            </section>
+            <!-- 策展自己-prezi應用-->
+            <section class="resume-section" id="策展自己-prezi應用">
+              <div class="resume-section-content">
+                <h1></h1>
+              </div>
+            </section>
+            <!-- Pinterest-->
+            <section class="resume-section" id="pinterest">
+              <div class="resume-section-content">
+                <h1></h1>
+              </div>
+            </section>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
