--- a/portfolios.html
+++ b/portfolios.html
@@ -36,9 +36,6 @@
                   <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#features">Features</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#pricing">Pricing</a>
-                  </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle " href="#各種作品" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       各種作品
@@ -56,18 +53,18 @@
          <!-- Page Content-->
             <!-- Home-->
             <section class="resume-section" id="home">
-              <div class="resume-section-content"></div>
-                  <button type="button" data-bs-target="#home" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"><img class="bd-placeholder-img fill" width="%" height="250%" src="assets/img/home背景.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"></img></button>
-                 <h1 class="mt-5">林鈞萱的作品介紹</h1>
+              <div class="resume-section-content ">
+                <div class="card text-bg-dark ">
+                  <img src="assets/img/home背景.jpg" class="card-img" alt="">
+                  <div class="card-img-overlay">
+                    <h1 class="card-title text-center">林鈞萱的作品介紹</h1>
+                    <p class="card-text">Jun xuan's portfolios</p>
+                  </div>
+                </div>
               </div>
             </section>
             <!-- Features-->
             <section class="resume-section" id="features">
-              <div class="resume-section-content">
-              </div>
-            </section>
-            <!-- Pricing-->
-            <section class="resume-section" id="pricing">
               <div class="resume-section-content">
               </div>
             </section>
