--- a/portfolios.html
+++ b/portfolios.html
@@ -33,9 +33,6 @@
                   <li class="nav-item">
                     <a class="nav-link active js-scroll-trigger" aria-current="page" href="#home">Home</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#features">Features</a>
-                  </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle " href="#各種作品" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       各種作品
@@ -45,6 +42,9 @@
                       <li class="dropdown-item"> <a class="js-scroll-trigger" href="#策展自己-prezi應用">策展自己-prezi應用</a></li>
                       <li class="dropdown-item"> <a class="js-scroll-trigger" href="#pinterest">Pinterest</a></li>
                     </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#connect">Connect</a>
                   </li>
                 </ul>
               </div>
@@ -63,11 +63,6 @@
                 </div>
               </div>
             </section>
-            <!-- Features-->
-            <section class="resume-section" id="features">
-              <div class="resume-section-content">
-              </div>
-            </section>
             <!-- 小論文-->
             <section class="resume-section" id="小論文">
               <div class="resume-section-content">
@@ -84,6 +79,11 @@
             <section class="resume-section" id="pinterest">
               <div class="resume-section-content">
                 <h1></h1>
+              </div>
+            </section>
+            <!-- Connect-->
+            <section class="resume-section" id="connect">
+              <div class="resume-section-content">
               </div>
             </section>
         </div>
