--- a/portfolios.html
+++ b/portfolios.html
@@ -66,7 +66,11 @@
             <!-- 小論文-->
             <section class="resume-section" id="小論文">
               <div class="resume-section-content">
-                <h1>空間色彩的變化對人的感受和情緒之影響</h1>
+                <div class="card">
+                  <div class="card-body">
+                    小論文-空間色彩的變化對人的感受和情緒之影響
+                  </div>
+                </div>
               </div>
             </section>
             <!-- 策展自己-prezi應用-->
