--- a/portfolios.html
+++ b/portfolios.html
@@ -54,22 +54,25 @@
             <!-- Home-->
             <section class="resume-section" id="home">
               <div class="resume-section-content ">
-                <div class="card text-bg-dark ">
-                  <img src="assets/img/home背景.jpg" class="card-img" alt="">
+                 <div class="card translate-middle-y text-bg-dark">
+                  <img class="card-img-fluid" src="assets/img/home背景.jpg" alt="" >
                   <div class="card-img-overlay">
-                    <h1 class="card-title text-center">林鈞萱的作品介紹</h1>
+                    <h1 class="card-title ">林鈞萱的作品介紹</h1>
+                    <p></p>
                     <p class="card-text">Jun xuan's portfolios</p>
                   </div>
-                </div>
+                 </div>
               </div>
             </section>
             <!-- 小論文-->
             <section class="resume-section" id="小論文">
               <div class="resume-section-content">
+                <div class="d-flex p-2">
                 <div class="card">
                   <div class="card-body">
                     小論文-空間色彩的變化對人的感受和情緒之影響
                   </div>
+                </div>
                 </div>
               </div>
             </section>
