home背景大小位置

--- a/portfolios.html
+++ b/portfolios.html
@@ -19,7 +19,7 @@
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/my_styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top">
+    <body id="page-top" class="yy">
         <div class="container">
           <div class="ws"></div>
          <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
@@ -54,8 +54,8 @@
             <!-- Home-->
             <section class="resume-section" id="home">
               <div class="resume-section-content ">
-                 <div class="card translate-middle-y text-bg-dark">
-                  <img class="card-img-fluid" src="assets/img/home背景.jpg" alt="" >
+                 <div class="card  text-bg-dark ">
+                  <img class="card-img-fluid rounded-lg" src="assets/img/home背景.jpg" alt="" >
                   <div class="card-img-overlay">
                     <h1 class="card-title ">林鈞萱的作品介紹</h1>
                     <p></p>
