--- a/portfolios.html
+++ b/portfolios.html
@@ -71,9 +71,9 @@
                     <h2>小論文</h2>
                     <p>空間色彩的變化對人的感受和情緒之影響</p>
                     <a href="https://docs.google.com/document/d/1YBWMrt45_XoNZNr0P_HY-e-5YXNHWf9f/edit"target="_blank" class="btn btn-primary">完整內容</a>  
-                    <img src="assets/img/小論文封面.png" class="img-fluid max-width:100%" alt="...">                
+                    <img src="assets/img/小論文封面.png" class="img-fluid max-width:100% rounded mx-auto d-block" alt="...">                
                   </div>
-                  <div class="accordion" id="accordionPanelsStayOpenExample">
+                  <div class="accordion  mx-auto" id="accordionPanelsStayOpenExample">
                     <div class="accordion-item">
                       <h2 class="accordion-header">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
@@ -116,7 +116,12 @@
             <!-- 策展自己-prezi應用-->
             <section class="resume-section" id="策展自己-prezi應用">
               <div class="resume-section-content">
-                <h1></h1>
+                <div class="it">
+                  <h2>數位策展-策展自己</h2>
+                  <p>策展工具Prezi</p>
+                  <a href="https://prezi.com/view/0oYkqMqmPbz2ENG4DD9S/"target="_blank" class="btn btn-primary">完整內容</a>
+                  <img src="assets/img/策展自己封面.png" class="img-fluid-2 max-width:100% rounded mx-auto d-block" alt="...">
+                </div>
               </div>
             </section>
             <!-- Pinterest-->
