--- a/portfolios.html
+++ b/portfolios.html
@@ -67,55 +67,62 @@
             <!-- 小論文-->
             <section class="resume-section" id="小論文">
               <div class="resume-section-content">
-                  <div class="it">
+                <div class="row">
+                  <div class="col-lg-7">
+                   <div class="it">
                     <h2>小論文</h2>
                     <p>空間色彩的變化對人的感受和情緒之影響</p>
                     <a href="https://docs.google.com/document/d/1YBWMrt45_XoNZNr0P_HY-e-5YXNHWf9f/edit"target="_blank" class="btn btn-primary">完整內容</a>  
                     <img src="assets/img/小論文封面.png" class="img-fluid max-width:100% rounded mx-auto d-block" alt="...">                
-                  </div>
-                  <div class="accordion  mx-auto" id="accordionPanelsStayOpenExample">
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                          小論文-前言
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
-                        <div class="accordion-body">
-                          <strong>此研究將帶人們從生活中感受色彩的不可思議，發現色彩對情緒的影響及生活中的運用。</strong> 顏色在生活中處處都是，我們可能不以為意，而色彩的神秘，也不被大多數人所探索，正因為如此，我想透過這次的小論文研究去發現和感受色彩，並關注情緒變化。
+                   </div>
+                  </div><!-- /.col-lg-7-->
+                  <div class="col-lg-5">
+                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            小論文-前言 簡述內容
+                          </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body">
+                            <strong>此研究將帶人們從生活中感受色彩的不可思議，發現色彩對情緒的影響及生活中的運用。</strong> 顏色在生活中處處都是，我們可能不以為意，而色彩的神秘，也不被大多數人所探索，正因為如此，我想透過這次的小論文研究去發現和感受色彩，並關注情緒變化。
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingTwo">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            小論文-正文 簡述內容
+                          </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body">
+                            <strong>人們直接或間接接收色彩，透過視覺、知覺、感情、記憶等一連串的連結，使顏色接收者產生極為複雜的反應和變化。而近年來，色彩應用上也極看重人類心理變化。</strong> 正文描述何謂色彩心理學，並說明色彩意象，如:象徵意義及功能。
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingThree">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                            小論文-問卷及問卷分析 簡述內容
+                          </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body">
+                            為了收集分析的參考數據,因此製作問卷"色彩心理影響",此問卷有15個問題。</strong> 問卷調查結果中，有幾題問題的統計結果和以經驗累積所形成的規範有些差異，也代表每個人的感受都存在些許差異。
+                          </div>
                         </div>
                       </div>
                     </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                          小論文-正文
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                          <strong>人們直接或間接接收色彩，透過視覺、知覺、感情、記憶等一連串的連結，使顏色接收者產生極為複雜的反應和變化。而近年來，色彩應用上也極看重人類心理變化。</strong> 正文描述何謂色彩心理學，並說明色彩意象，如:象徵意義及功能。
-                        </div>
-                      </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                          小論文-問卷及問卷分析
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                          <strong>為了收集分析的參考數據,因此製作問卷"色彩心理影響",此問卷有15個問題。</strong> 問卷調查結果中，有幾題問題的統計結果和以經驗累積所形成的規範有些差異，也代表每個人的感受都存在些許差異。
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                  </div><!-- /.col-lg-5 -->
+                </div><!-- /.row -->
               </div>
             </section>
+            ==============================================================================================================================================
             <!-- 策展自己-prezi應用-->
             <section class="resume-section" id="策展自己-prezi應用">
-              <div class="resume-section-content">
+              <div class="resume-section-conten" id="策展自己-prezi應用">
                 <div class="it">
                   <h2>數位策展-策展自己</h2>
                   <p>策展工具Prezi</p>
