策展自己及pinterest

--- a/portfolios.html
+++ b/portfolios.html
@@ -64,6 +64,7 @@
                  </div>
               </div>
             </section>
+          <hr class="m-0" />
             <!-- 小論文-->
             <section class="resume-section" id="小論文">
               <div class="resume-section-content">
@@ -119,24 +120,92 @@
                 </div><!-- /.row -->
               </div>
             </section>
-            ==============================================================================================================================================
+          <hr class="m-0" /> 
             <!-- 策展自己-prezi應用-->
             <section class="resume-section" id="策展自己-prezi應用">
               <div class="resume-section-conten" id="策展自己-prezi應用">
-                <div class="it">
+                <div class="row">
+                  <div class="col-lg-6">
+                   <div class="it">
                   <h2>數位策展-策展自己</h2>
                   <p>策展工具Prezi</p>
+                  <h6>策展主題是自己，我策展的內容更多是我自己在人生道路上至今的探索和對自己的發現，所以標題有人格特質、體驗及發現，並且在我的理解中人生的探索從來沒有終點，因此背景選擇向遠處延伸的道路。</h6>
                   <a href="https://prezi.com/view/0oYkqMqmPbz2ENG4DD9S/"target="_blank" class="btn btn-primary">完整內容</a>
                   <img src="assets/img/策展自己封面.png" class="img-fluid-2 max-width:100% rounded mx-auto d-block" alt="...">
+                   </div>
+                  </div><!-- /.col-lg-6-->
+                  <div class="col-lg-6">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                  </div>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="assets/img/策展自己1.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="assets/img/策展自己2.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="assets/img/策展自己3.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="assets/img/策展自己4.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="assets/img/策展自己5.png" class="d-block w-100" alt="...">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
                 </div>
+                  </div><!-- /.col-lg-6-->
+                </div><!-- /.row -->
               </div>
             </section>
+          <hr class="m-0" />  
             <!-- Pinterest-->
             <section class="resume-section" id="pinterest">
               <div class="resume-section-content">
-                <h1></h1>
+                <div class="it">
+                  <h2>Pinterest</h2>
+                  <p>用攝影記錄生活</p>
+                  <h6>攝影是我的興趣，也是我觀察生活的方式，漂亮的景色總是轉瞬即逝，但攝影卻能將那刻定格。我用Pinterest將攝影作品分類整理，也方便尋找和運用。</h6>
+                </div>
+                <div class="row">
+                 <div class="col-lg-6">
+                <div class="card--2" style="width: 18rem;">
+                  <img src="assets/img/攝影作品封面.png" class="card-img-top" alt="..."><span class="border border-light"></span>
+                  <div class="card-body">
+                    <h5 class="card-title-2">策展自己-攝影作品</h5>
+                    <p class="card-text-2">將攝影作品從策展作品中延伸出來做整理/在人生探索階段中，攝影不僅僅是記錄，更是一種見證、成長，所以將攝影作品進行統整。</p>
+                    <a href="https://pin.it/5bHw1sc" class="btn btn-primary">前往Pinterest</a>
+                  </div>
+                </div>
+                 </div><!-- /.col-lg-6-->
+                 <div class="col-lg-6">
+                  <div class="card--2" style="width: 18rem;">
+                    <img src="assets/img/記錄生活封面.png" class="card-img-top rounded-lg" alt="..."><span class="border border-light"></span>
+                    <div class="card-body">
+                      <h5 class="card-title-2">記錄生活</h5>
+                      <p class="card-text-2">生活中美好的畫面轉瞬即逝，但透過照片留存，回頭來看永遠能回憶起當時拍攝的心情。因此透過Pinterest將生活中捕捉的美好進行整理。</p>
+                      <a href="https://pin.it/NyoUgl7" class="btn btn-primary">前往Pinterest</a>
+                    </div>
+                  </div>
+                 </div><!-- /.col-lg-6-->
               </div>
             </section>
+          <hr class="m-0" /> 
             <!-- Connect-->
             <section class="resume-section" id="connect">
               <div class="resume-section-content">
