--- a/portfolios.html
+++ b/portfolios.html
@@ -207,10 +207,16 @@
             </section>
           <hr class="m-0" /> 
             <!-- Connect-->
-            <section class="resume-section" id="connect">
-              <div class="resume-section-content">
-              </div>
-            </section>
+                <footer class="text-body-secondary py-5" id="connect">
+                  <div class="container">
+                    <p class="float-end mb-1">
+                      <a href="#"></a>
+                    </p>
+                    <p class="mb-1">這是林鈞萱的作品集 謝謝觀看</p>
+                    <p class="mb-1">This is Jun-Xuan-Lin's portfolios. Thank you. </p>
+                    <p class="mb-0">Gmail: <h5><a href="/">lin230618@gmail.com</a> </h5></p>
+                  </div>
+                </footer>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
